--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-Hello World! blablablabla
-gsdfs
-fsdfsd
-sdfsd
-sdf
-sdf
-sd
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+<body>
+<body>
+<body>
+<body>
+<body>
+<a href="slika.jpg"></a>
+</body>
+</html>
