--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 	<title></title>
 </head>
 <body>
-<body>
-<body>
-<body>
-<body>
-<body>
 <a href="slika.jpg"></a>
+<img src="slika.jpg">
+<img src="slika2.jpg">
 </body>
 </html>
